# Ako

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  THIRDPARTY  build.ninja
.github/workflows/: Ubuntu.yml  Windows.yml
include/: ako.h
resources/: ans-cdf.hpp  ans-d2.txt  ans1-core.cpp  ans1.cpp  ans2-normalization.cpp  bake-cdf.py  build.ninja  cdf.hpp  cdf53-prob1d.c  cdf53-prob2d.c  cloc.sh  codes.plot  codes.py  gen-tables.rb  generic.plot  haar-prob1D.c  haar-prob2D.c  histogram.plot  native.ninja  sparc.ninja  sparc64.ninja  tidy.sh  wasm32.ninja
resources/research/: cdf53.cpp  dd137.cpp  new-cdf53.py  shared.hpp
resources/research/ans/: ans1-core.cpp  ans2-normalization.cpp  data3.txt  unfinished-new-cdf.hpp
resources/test-images/: guanaco.txt  kodak.txt  test.txt  texture.txt
source/: ako-decode.c  ako-encode.c  ako-tables.rb  ako-version.c
tests/: ans-bits.cpp  ans.cpp  bit.cpp  cdf53-test.c  cdf53.cpp  dd137-test.c  elias-test.c  encoding-cases.cpp  forward-and-backward.cpp  forward-backward.cpp  fuzzer-ans.cpp  kagari-ans.cpp  kagari-bits.cpp  kagari.cpp  rice.cpp  rle-test.c  wavelet-cdf53-2.cpp  wavelet-cdf53-simd.cpp  wavelet-cdf53.cpp  wavelet-cdf97.cpp  wavelet-haar.cpp  wavelet.hpp
tools/: adler32.cpp  akodec.c  akodec.cpp  akoenc.c  akoenc.cpp  akoview.cpp  benchmark.hpp  callbacks.cpp  developer.cpp  misc.hpp  modern-app.hpp  options.hpp  pgm.cpp  png.cpp  shared.hpp
tools/common/: adler32.cpp  adler32.hpp  callbacks.cpp  callbacks.hpp  developer.cpp  developer.hpp  misc.hpp  png.cpp  png.hpp
